--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ Pillow>=7.1.2
 protobuf==3.15.0
 PyAudio==0.2.11
 pycairo==1.16.2
-pycrypto==2.6.1
+pycrypto>=2.6.1
 pycups==1.9.73
 pygame==1.9.6
 pygobject==3.26.1
